@@ -26,12 +26,12 @@ netPanzer 0.1.2 is available now:
 This is still a maintenance and bugfix release. We're working on an editor and a
 UI rewrite, but these have to wait for a later release. Changes:
 
-    -fix bug where the lobby view would always display 0/x players
-    -some robustness and usability fixes for the irc lobby code
-    -new slovakian flag
-    -lots of code cleanups and rewrites (and still lots more to do)
-    -unit spawnpoint can be choosen at the outposts now
-    -some small UI improvements
-    -reorganised build environment
-    -network packets are smaller and more robust now
+    * fix bug where the lobby view would always display 0/x players
+    * some robustness and usability fixes for the irc lobby code
+    * new slovakian flag
+    * lots of code cleanups and rewrites (and still lots more to do)
+    * unit spawnpoint can be choosen at the outposts now
+    * some small UI improvements
+    * reorganised build environment
+    * network packets are smaller and more robust now
 
